--- a/src/scss/_constants.scss
+++ b/src/scss/_constants.scss
@@ -69,7 +69,7 @@ $font-size: 16px;
 //$font-size-large: 22px;
 $font-size-small: 14px;
 
-$line-height: 1.5;
+$line-height: 1.4;
 $line-height-headline: 1.2;
 
 // Main colors
@@ -82,8 +82,8 @@ $color-bordeaux: #6c181c;
 $color-grey-light: #cccccc;
 $color-grey-middle: #b4aca6;
 $color-grey-dark: #626262;
-$color-green: #5ba122;
-$color-green-dark: #427517;
+$color-green: #7BAD00FF;
+$color-green-dark: #729c01;
 $color-grey-headerbackground: #dbd5cd;
 
 // Text colors
