--- a/src/templates/includes/_includes_navigation.ejs
+++ b/src/templates/includes/_includes_navigation.ejs
@@ -1,4 +1,4 @@
-<header id="header-desktop" class="header-desktop show-from-tablet width-full">
+<header id="header-desktop" class="header-desktop show-from-desktop width-full">
     <div class="header-desktop--container">
         <div class="header-desktop--container-inner width-xl">
             <!-- BEGIN: header-desktop top -->
