--- a/src/templates/includes/_includes_navigation_mobile.ejs
+++ b/src/templates/includes/_includes_navigation_mobile.ejs
@@ -1,4 +1,4 @@
-<header id="header-mobile" class="header-mobile hide-from-tablet width-full">
+<header id="header-mobile" class="header-mobile hide-from-desktop width-full">
     <div class="header-mobile--container">
         <div class="header-mobile--container-inner width-xl">
 
