--- a/src/templates/layout/_default.ejs
+++ b/src/templates/layout/_default.ejs
@@ -15,3 +15,6 @@
 
 <!-- INCLUDE: _includes_footer -->
 <%- include('../includes/_includes_footer') %>
+
+<!-- INCLUDE: SCRIPTS -->
+<%- include('../includes/_includes_scripts') %>
