--- a/src/templates/partials/page/_index.ejs
+++ b/src/templates/partials/page/_index.ejs
@@ -4,8 +4,18 @@
 <!-- INCLUDE: _ce-text-image-teaser -->
 <%- include('../../content/_ce-text-image-teaser') %>
 
+<!-- INCLUDE: _includes_divider -->
+<%- include('../../includes/_includes_divider') %>
+
 <!-- INCLUDE: _ce-main-technologies -->
 <%- include('../../content/_ce-main-technologies') %>
 
 <!-- INCLUDE: _ce-last-projects -->
 <%- include('../../content/_ce-last-projects') %>
+
+<!-- INCLUDE: _includes_divider -->
+<%- include('../../includes/_includes_divider') %>
+
+<!-- INCLUDE: _ce-testimonials-->
+<%- include('../../content/_ce-testimonials') %>
+
