--- a/src/scss/content/_ce-hero.scss
+++ b/src/scss/content/_ce-hero.scss
@@ -1,4 +1,5 @@
 .hero {
+  padding: 0;
   text-align: center;
 
   &--headline,
@@ -26,10 +27,11 @@
   }
 
   .hero--content {
+    width: 100%; // Is must
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -40%);
   }
 
   .hero--content-links {
