--- a/src/scss/critical/header_mobile.scss
+++ b/src/scss/critical/header_mobile.scss
@@ -1,3 +1,6 @@
+@import "../constants";
+@import "../base/mixins";
+
 header {
   background: black;
   color: #fff;
@@ -10,13 +13,17 @@ header {
   left: 0;
   right: 0;
   z-index: 1;
-  padding: 34px;
 }
 
 .header-mobile-top {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 30px 24px;
+
+  @include from($mobile) {
+    padding: 32px;
+  }
 }
 
 .header-mobile--container-inner {
@@ -24,14 +31,19 @@ header {
 }
 
 .mobile-nav {
-  transition: 0.3s ease-in-out;
-  position: relative;
+  position: absolute;
+  top: 0;
   left: -100%;
-  display: inline-block;
+  transition: 0.3s ease-in-out;
+  padding: 32px;
+  background-color: red;
+  height: 100vh;
 
   &.show {
-    transition: 0.3s ease-in-out;
     left: 0%;
+    transition: 0.3s ease-in-out;
+    width: 220px;
+
   }
 }
 
