--- a/src/templates/content/_ce-hero.ejs
+++ b/src/templates/content/_ce-hero.ejs
@@ -1,24 +1,28 @@
-<section class="hero width-full">
+<section class="hero">
     <div class="hero--container">
         <div class="hero--container-inner">
+            <img src="/img/hero/hero_mobile.jpg"
+                 class="hero-image hide-from-tablet"
+                 title="hero"
+                 alt="hero">
             <img src="/img/hero/hero.jpg"
-                 class="hero-image"
+                 class="hero-image show-from-tablet"
                  title="hero"
                  alt="hero">
             <!-- Container in center hero section -->
             <div class="hero--content">
-                <h1 class="hero--headline">
+                <h2 class="hero--headline">
                     We provide the best metal <br> service World wide
-                </h1>
+                </h2>
                 <p class="hero--description">
                     Maecenas faucibus mollis interdum. Sed posuere <br> consectetur est at
                     lobortis.
                 </p>
                 <div class="hero--content-links">
                     <a href=""
-                       class="cta">Explore</a>
-                    <a href=""
-                       class="cta-outline-white">About us</a>
+<!--                       class="cta">My projects</a>-->
+<!--                    <a href=""-->
+<!--                       class="cta-outline-white">CV</a>-->
                 </div>
             </div>
         </div>
