--- a/src/templates/content/_ce-text-image-teaser.ejs
+++ b/src/templates/content/_ce-text-image-teaser.ejs
@@ -2,18 +2,22 @@
     <div class="text-image-teaser--container">
         <div class="text-image-teaser--container-inner width-l">
             <div class="text-image-teaser--column-left">
+                <small>Hello there!</small>
                 <h2 class="text-image-teaser--headline">
-                    Get full range of premium Industrial services for your business
-                </h2> 
+                    I would like to introduce myself.
+                </h2>
                 <p class="text-image-teaser--description">
-                    Lorem ipsum dolor sit amet, consectetur adipisc ing elit, sed do eiusmod tempor inci didunt ut
-                    labore et dolore magna.
-                </p>
+                    I'm highly <strong>SELF-MOTIVATED</strong> and team-player web developer and always ready to expand my knowledge by
+                    learning. My focus is on building web applications, front-end, and back-end development.
+                </p><br>
+                <p class="text-image-teaser--description">
+                    My MAIN and ONLY motto is: The Genius Is In The <strong>SIMPLE things</strong>.
+                    REACT, VUE, GULP and NODE is my preferred tools for building web applications.
+                </p><br>
                 <p class="text-image-teaser-description">
-                    Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
-                    aliquid ex ea commodi consequatur
+                    Thank you for reading my description and if you want additional information, please contact me.
                 </p>
-                <a class="cta text-image-teaser--link" href="">Read more</a>
+                <a class="cta text-image-teaser--link" href="">Github</a>
             </div>
             <div class="text-image-teaser-column-right">
                 <div class="text-image-teaser--img-box">
