rest projects section & class js folder created

--- a/src/scss/base/_base_critical.scss
+++ b/src/scss/base/_base_critical.scss
@@ -46,7 +46,7 @@ textarea {
 }
 
 section{
-  padding-top: 50px;
+  //padding-top: 50px;
   padding-bottom: 35px;
 }
 
@@ -136,7 +136,7 @@ h5,
 }
 
 p {
-  // margin-bottom: 24px;
+  margin-bottom: 15px;
   font-weight: $font-weight-light;
   color: $color-grey-dark;
 }
