--- a/src/templates/content/_ce-last-projects.ejs
+++ b/src/templates/content/_ce-last-projects.ejs
@@ -1,55 +1,69 @@
 <section class="last-projects">
-  <div class="last-projects--container">
-    <div class="last-projects--container-inner width-xxl">
-      <h2 class="center last-projects--headline">Participation in the last three projects</h2>
-
-      <div class="last-projects--content">
-        <!-- Left column -->
-        <div class="last-projects--column-left">
-          <div class="last-projects--left-image-box">
-            <a class="last-projects--left--link" href="https://www.formaideale.rs/" target="_blank">
-              <img src="/img/formaideale.jpg" alt="forma ideale" title="forma ideale" />
-              <span class="cta-main-arrow-invert">
-                Pogledajte više na sajtu
-                <span class="link-arrow"></span>
-              </span>
-            </a>
-          </div>
-          <div class="last-projects--left-content-box">
-            <small class="last-projects--left-small-text">02. 10. 1993</small>
-            <h4 class="last-projects--left--headline">China’s industrial profits</h4>
-            <p class="last-projects--left--description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A</p>
-            <a href="" class="cta-outline-black">Read more</a>
-          </div>
+    <div class="last-projects--container">
+        <div class="last-projects--container-inner width-xxl">
+            <h2 class="center last-projects--headline">Participation in the last three projects</h2>
+            <div class="last-projects--content">
+                <!-- Left column -->
+                <div class="last-projects--column-left">
+                    <div class="last-projects--left-image-box">
+                        <a class="last-projects--left--link" href="https://www.formaideale.rs/" target="_blank">
+                            <img src="/img/formaideale.jpg" alt="forma ideale" title="forma ideale"/>
+                            <span class="cta-main-arrow-invert">See more on website ...<span class="link-arrow"></span></span>
+                        </a>
+                    </div>
+                    <div class="last-projects--left-content-box">
+                        <small class="last-projects--small-text">01.02.2021</small>
+                        <h4 class="last-projects--left--headline">Forma Ideale</h4>
+                        <p class="last-projects--left--description">
+                            Front end development and manipulation content
+                            elements with TYPO3 CMS.
+                        </p>
+                        <a href="https://www.formaideale.rs/" target="_blank"
+                           class="cta-outline-black">Website</a>
+                    </div>
+                </div>
+                <!-- Right column -->
+                <div class="last-projects--column-right">
+                    <div class="last-projects--right-item">
+                        <div class="last-projects--right-image-box">
+                            <a href="https://www.tritonex.rs/" target="_blank">
+                                <img src="/img/tritonex.jpg"
+                                     title=""
+                                     alt=""/>
+                            </a>
+                        </div>
+                        <div class="last-projects--right-content-box">
+                            <small class="last-projects--small-text">01.06.2021</small>
+                            <h5 class="last-projects--right--headline">China’s industrial profits</h5>
+                            <p class="last-projects--left--description">Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. A</p>
+                            <a href="https://www.tritonex.rs/"
+                               target="_blank"
+                               class="last-projects--right-link">Read more</a>
+                        </div>
+                    </div>
+                    <div class="last-projects--column-right">
+                        <div class="last-projects--right-item">
+                            <div class="last-projects--right-image-box">
+                                <a href="https://www.tritonex.rs/"
+                                   target="_blank">
+                                    <img src="/img/tritonex.jpg"
+                                         alt=""/>
+                                </a>
+                            </div>
+                            <div class="last-projects--right-content-box">
+                                <small class="last-projects--small-text">01.06.2021</small>
+                                <h5 class="last-projects--right--headline">China’s industrial profits</h5>
+                                <p class="last-projects--left--description">Lorem ipsum dolor sit amet, consectetur
+                                    adipisicing elit. A</p>
+                                <a href="https://www.tritonex.rs/"
+                                   target="_blank"
+                                   class="last-projects--right-link">Read more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <!-- Right column -->
-        <div class="last-projects--column-right">
-          <div class="last-projects--right-item">
-            <div class="last-projects--right-image-box">
-              <img src="/img/tritonex.jpg" alt="" />
-            </div>
-            <div class="last-projects--right-content-box">
-              <small class="last-projects--small-text">02. 10. 1993</small>
-              <h5 class="last-projects--right--headline">China’s industrial profits</h5>
-              <p class="last-projects--left--description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A</p>
-              <a href="" class="last-projects--right-link">Read more</a>
-            </div>
-          </div>
-
-          <div class="last-projects--right-item">
-            <div class="last-projects--right-image-box">
-              <img src="/img/tritonex.jpg" alt="" />
-            </div>
-            <div class="last-projects--right-content-box">
-              <small class="last-projects--small-text">02. 10. 1993</small>
-              <h5 class="last-projects--right--headline">China’s industrial profits</h5>
-              <p class="last-projects--left--description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A</p>
-              <a href="" class="last-projects--right-link">Read more</a>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
 </section>
