--- a/src/templates/content/_ce-text-image-teaser.ejs
+++ b/src/templates/content/_ce-text-image-teaser.ejs
@@ -7,17 +7,20 @@
                     I would like to introduce myself.
                 </h2>
                 <p class="text-image-teaser--description">
-                    I'm highly <strong>SELF-MOTIVATED</strong> and team-player web developer and always ready to expand my knowledge by
+                    I'm highly <strong>SELF-MOTIVATED</strong> and team-player web developer and always ready to expand
+                    my knowledge by
                     learning. My focus is on building web applications, front-end, and back-end development.
-                </p><br>
+                </p>
                 <p class="text-image-teaser--description">
                     My MAIN and ONLY motto is: The Genius Is In The <strong>SIMPLE things</strong>.
                     REACT, VUE, GULP and NODE is my preferred tools for building web applications.
-                </p><br>
+                </p>
                 <p class="text-image-teaser-description">
                     Thank you for reading my description and if you want additional information, please contact me.
                 </p>
-                <a class="cta text-image-teaser--link" href="">Github</a>
+                <a class="cta text-image-teaser--link"
+                   href="/files/Milan-Milic-CV.pdf"
+                   download>Download CV</a>
             </div>
             <div class="text-image-teaser-column-right">
                 <div class="text-image-teaser--img-box">
