--- a/src/templates/partials/page/_index.ejs
+++ b/src/templates/partials/page/_index.ejs
@@ -7,11 +7,11 @@
 <!-- INCLUDE: _includes_divider -->
 <%- include('../../includes/_includes_divider') %>
 
-<!-- INCLUDE: _ce-main-technologies -->
-<%- include('../../content/_ce-main-technologies') %>
-
 <!-- INCLUDE: _ce-last-projects -->
 <%- include('../../content/_ce-last-projects') %>
+
+<!-- INCLUDE: _ce-main-technologies -->
+<%- include('../../content/_ce-main-technologies') %>
 
 <!-- INCLUDE: _includes_divider -->
 <%- include('../../includes/_includes_divider') %>
@@ -19,3 +19,8 @@
 <!-- INCLUDE: _ce-testimonials-->
 <%- include('../../content/_ce-testimonials') %>
 
+<!-- INCLUDE: _ce-projects-->
+<%- include('../../content/_ce-projects') %>
+
+<!-- INCLUDE: _includes_divider -->
+<%- include('../../includes/_includes_divider') %>
