--- a/src/scss/critical/header_mobile.scss
+++ b/src/scss/critical/header_mobile.scss
@@ -19,10 +19,10 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 30px 24px;
+  padding: 52px 24px 0 24px;
 
   @include from($mobile) {
-    padding: 32px;
+    padding: 52px 32px 0 32px;
   }
 }
 
