--- a/src/templates/content/_ce-hero.ejs
+++ b/src/templates/content/_ce-hero.ejs
@@ -11,18 +11,15 @@
                  alt="hero">
             <!-- Container in center hero section -->
             <div class="hero--content">
-                <h2 class="hero--headline">
+                <h1 class="hero--headline">
                     We provide the best metal <br> service World wide
-                </h2>
+                </h1>
                 <p class="hero--description">
                     Maecenas faucibus mollis interdum. Sed posuere <br> consectetur est at
                     lobortis.
                 </p>
                 <div class="hero--content-links">
-                    <a href=""
-<!--                       class="cta">My projects</a>-->
-<!--                    <a href=""-->
-<!--                       class="cta-outline-white">CV</a>-->
+                    <a href="" class="cta">My projects</a>
                 </div>
             </div>
         </div>
