--- a/src/templates/includes/_includes_navigation_mobile.ejs
+++ b/src/templates/includes/_includes_navigation_mobile.ejs
@@ -1,36 +1,23 @@
 <header id="header-mobile" class="header-mobile hide-from-desktop width-full">
     <div class="header-mobile--container">
         <div class="header-mobile--container-inner width-xl">
-
             <div class="header-mobile-top">
-                <a href="">LOGO</a>
+                <!-- INCLUDE:  _includes_logo -->
+                <%- include('_includes_logo') %>
                 <div class="header-mobile--toggle-box">
                     <span></span>
                     <span></span>
                     <span></span>
                 </div>
             </div>
-
-
             <nav class="mobile-nav">
                 <ul>
-                    <li>
-                        <a href="">home page</a>
-                    </li>
-                    <li>
-                        <a href="">contact</a>
-                    </li>
-                    <li>
-                        <a href="">about</a>
-                    </li>
-                    <li>
-                        <a href="">location</a>
-                    </li>
+                    <li><a href="">home page</a></li>
+                    <li><a href="">contact</a></li>
+                    <li><a href="">about</a></li>
+                    <li><a href="">location</a></li>
                 </ul>
             </nav>
         </div>
     </div>
 </header>
-
-
-
