--- a/src/scss/_constants.scss
+++ b/src/scss/_constants.scss
@@ -78,6 +78,7 @@ $color-typography: #0a0a0a;
 $color-black: #262626;
 $color-typography-invert: #fff;
 $color-white: #fff;
+$color-grey-extra-light:#efefef;
 $color-red: #9b1c20;
 $color-bordeaux: #6c181c;
 $color-grey-light: #cccccc;
