--- a/src/scss/content/_ce-breadcrumb.scss
+++ b/src/scss/content/_ce-breadcrumb.scss
@@ -1,9 +1,5 @@
 .breadcrumb {
-  padding: 0;
-}
-
-.breadcrumb--container-inner {
-  margin-top: 20px;
+  padding: 20px 0;
 }
 
 .breadcrumb--item {
