--- a/src/scss/content/_ce-client-satisfaction.scss
+++ b/src/scss/content/_ce-client-satisfaction.scss
@@ -1,9 +1,10 @@
 .client-satisfaction {
-  padding: 60px 0;
+
+  padding: 60px 30px;
   background: url("/img/client-satisfacton-bg.jpg") no-repeat center/cover;
 }
 .client-satisfaction--container-inner {
-  padding: 20px;
+  //padding: 20px;
   text-align: center;
 }
 
