--- a/src/scss/content/_ce-testimonials.scss
+++ b/src/scss/content/_ce-testimonials.scss
@@ -2,7 +2,7 @@
 .testimonials {
   margin: 0 -24px;
   padding: 40px 24px 60px 24px;
-  background-color: $color-grey-light;
+  background-color: $color-grey-extra-light;
 
   @include from($mobile) {
     margin: 0 -32px;
