--- a/src/templates/content/_ce-contact-form.ejs
+++ b/src/templates/content/_ce-contact-form.ejs
@@ -72,8 +72,9 @@
                                   rows="7"></textarea>
                     </div>
                 </div>
-                <button type="submit"
-                        class="contact-form--submit-btn">Submit
+                <button class="contact-form--submit-btn"
+                        type="submit">
+                    Submit
                 </button>
             </form>
         </div>
