--- a/src/templates/partials/page/_index.ejs
+++ b/src/templates/partials/page/_index.ejs
@@ -10,8 +10,8 @@
 <!-- INCLUDE: _ce-last-projects -->
 <%- include('../../content/_ce-last-projects') %>
 
-<!-- INCLUDE: _includes_divider -->
-<%- include('../../includes/_includes_divider') %>
+<!-- INCLUDE: _ce-thinks_i_love -->
+<%- include('../../content/_ce-thinks_i_love') %>
 
 <!-- INCLUDE: _ce-projects-->
 <%- include('../../content/_ce-projects') %>
