--- a/src/templates/content/_ce-thinks_i_love.ejs
+++ b/src/templates/content/_ce-thinks_i_love.ejs
@@ -1,7 +1,7 @@
 <section class="thinks width-full">
     <div class="thinks--container">
         <div class="thinks--container-inner width-m">
-            <h2 class="center thinks--headline">Thinks i love</h2>
+            <h2 class="center thinks--headline">Things I love</h2>
             <div class="thinks--boxes">
                 <div class="thinks--box">
                     <div class="thinks--svg-box thinks--svg-box--frontend"></div>
