--- a/src/scss/content/_ce-contact-form.scss
+++ b/src/scss/content/_ce-contact-form.scss
@@ -1,3 +1,9 @@
+.contact-form {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+
 // Contact form | container inner
 .contact-form--container-inner {
   display: grid;
